# fano

./: .gitignore  CLAUDE.md  README.md  TASK_ORCHESTRATION_REVIEW.md  config.yaml  fano_explorer.py  pyproject.toml  pytest.ini  requirements.txt  run_orchestrator.py  test_deep_think.py
control/: server.py
control/blueprints/: __init__.py  components.py  documenter.py  explorer.py  orchestrator.py  pool.py  status.py
control/services/: process_manager.py
control/templates/: index.html
data/axioms/: seeds.yaml  target_numbers.yaml
data/explorations/: d9173853-d2d.json
docs/requirements/: module-orchestration-4  module-orchestration.md
documenter/: adapter.py  adapter_v3.py  architect.py  comments.py  consensus_board.py  diagram_sandbox.py  document.py  illustrator.py  main.py  mason.py  opportunities.py  opportunity_processor.py  planning.py  repository.py
explorer/: config.yaml  fano_explorer.py  requirements.txt
explorer/src/: adapter.py  orchestrator.py
llm/: __init__.py  requirements.txt
llm/src/: __init__.py  adapters.py  client.py  consensus.py  models.py
llm/tests/: test_adapters.py  test_client.py  test_consensus.py  test_models.py
orchestrator/: __init__.py  adapters.py  allocator.py  api.py  legacy.py  main.py  models.py  scheduler.py  state.py  worker.py
pool/: browser_pool.py  config.yaml  requirements.txt  run_pool.py
pool/src/: __init__.py  api.py  jobs.py  models.py  queue.py  (+2 more)
shared/: __init__.py  deduplication.py  document_audit.py
src/: orchestrator.py
templates/: review.html
tests/: conftest.py
tools/: migrate_doc.py
(+76 files in other folders)
